# what-the-fuck-is-my-scratch-bot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml
bot/: CMakeLists.txt
bot/include/: background_command.hpp  command.hpp  message_handler.hpp  method_wrappers.hpp  string_utils.hpp
bot/include/commands/: cmus_status.hpp  cpp_shell.hpp  delete_saved_photos.hpp  hello_world.hpp  id_collector.hpp  kick_all.hpp  ping_all.hpp  smtp_mail_send.hpp  stalking.hpp  zettelkasten.hpp
bot/src/: main.cpp  message_handler.cpp  method_wrapperes.cpp  string_utils.cpp
modules/: CMakeLists.txt
stuff/: CMakeLists.txt
stuff/src/: cmus_status.cpp  cpp_shell.cpp  delete_messages_from_user.cpp  friends_graph.cpp  id_collector.cpp  kick_all.cpp  messages_generator.cpp  photo_deleter.cpp  pic_from_message.cpp  ping_all.cpp  zettelkasten.cpp
